--- a/_includes/graph.html
+++ b/_includes/graph.html
@@ -136,17 +136,17 @@
   <div class="Graph--Background">
     <ul id="Graph--Bars">
       <li class="Graph--Labor-Savings">
-        <div class="Graph--Bar">
+        <div class="Graph--Bar" id="Graph--Labor-Savings-Bar">
           <span class="Graph--Amount">$2,000</span>
         </div>
       </li>
       <li class="Graph--Water-Savings">
-        <div class="Graph--Bar">
+        <div class="Graph--Bar" id="Graph--Water-Savings-Bar">
           <span class="Graph--Amount">$1,000</span>
         </div>
       </li>
       <li class="Graph--Chemical-Savings">
-        <div class="Graph--Bar">
+        <div class="Graph--Bar" id="Graph--Chemical-Savings-Bar">
           <span class="Graph--Amount">$500</span>
         </div>
       </li>
