Fixed background image

--- a/_includes/graph.html
+++ b/_includes/graph.html
@@ -4,7 +4,7 @@
   }
 
   .Graph--Background {
-    background-image: url('/img/section.jpg');
+    background-image: url('img/section.jpg');
     background-repeat: repeat-y;
     background-size: 100%;
     border: 1px solid #231f20;
