Client changes related to design.

--- a/_includes/script.html
+++ b/_includes/script.html
@@ -187,11 +187,16 @@ Calculator.prototype.propagate = function () {
       case 'weeklyRestroomChemicals':
       element.text(this.money(this.getRestroomWeeklyChemicalsCost()));
       break;
-      case 'annualLaborSavings':
-      //element
-      cost = this.getAnnualLaborSavings();
       case 'annualWaterSavings':
       if (!cost) cost = this.getAnnualWaterSavings();
+      var newHeight = this.getPixelWidth(cost);
+      jQuery('.Graph--Amount', element).text(this.money(cost, 0, 0));
+      element.css('height', newHeight + 'px');
+      break;
+      case 'annualLaborSavings':
+        //element
+        cost = this.getAnnualLaborSavings();
+
       case 'annualChemicalSavings':
       if (!cost) cost = this.getAnnualChemicalsSavings();
 
