--- a/_includes/graph.html
+++ b/_includes/graph.html
@@ -50,13 +50,13 @@
     left:40px;
   }
 
-  .Graph--Water-Savings {
+  .Graph--Chemical-Savings {
     position: absolute;
     bottom: 0px;
     left:110px;;
   }
 
-  .Graph--Chemical-Savings {
+  .Graph--Water-Savings {
     position: absolute;
     bottom: 0px;
     left:180px;
@@ -118,17 +118,17 @@
 
 <div class="Graph--Legend-Left">
   <ol>
-    <li>$10,000</li>
-    <li>$9,000</li>
-    <li>$8,000</li>
-    <li>$7,000</li>
-    <li>$6,000</li>
-    <li>$5,000</li>
-    <li>$4,000</li>
-    <li>$3,000</li>
-    <li>$2,000</li>
-    <li>$1,000</li>
-    <li>$0</li>
+    <li>10,000</li>
+    <li>9,000</li>
+    <li>8,000</li>
+    <li>7,000</li>
+    <li>6,000</li>
+    <li>5,000</li>
+    <li>4,000</li>
+    <li>3,000</li>
+    <li>2,000</li>
+    <li>1,000</li>
+    <li>0</li>
   </ol>
 </div>
 
@@ -140,14 +140,14 @@
           <span class="Graph--Amount">$2,000</span>
         </div>
       </li>
-      <li class="Graph--Water-Savings">
-        <div class="Graph--Bar" id="Graph--Water-Savings-Bar">
-          <span class="Graph--Amount">$1,000</span>
-        </div>
-      </li>
       <li class="Graph--Chemical-Savings">
         <div class="Graph--Bar" id="Graph--Chemical-Savings-Bar">
           <span class="Graph--Amount">$500</span>
+        </div>
+      </li>
+      <li class="Graph--Water-Savings">
+        <div class="Graph--Bar" id="Graph--Water-Savings-Bar">
+          <span class="Graph--Amount">1,000</span>
         </div>
       </li>
     </li>
@@ -157,8 +157,8 @@
 <div class="Graph--Key-Bottom">
   <ul>
     <li style="margin-left: 30px;">Labor Savings</li>
-    <li style="margin-left: 20px;">Water Savings (gallons)</li>
     <li style="margin-left: 20px;">Chemical Savings</li>
+    <li style="margin-left: 20px;">Water Savings (gallons)</li>
   </ul>
 </div>
 
