Integrated storage costs

--- a/_includes/script.html
+++ b/_includes/script.html
@@ -65,6 +65,7 @@ var Calculator = function() {
 
   this.getAnnualLaborSavings = function () {
     var num = (this.getToolsWeeklyLaborCost() - this.getRestroomWeeklyLaborCost()) * 52;
+    num += this.getAnnualStorageSavings();
     return num;
   }
 
